--- a/examples/configs/automation/socketTest.toml
+++ b/examples/configs/automation/socketTest.toml
@@ -22,5 +22,5 @@ Enabled = true
 
 [Action.1]
   Topic = "zigbee2mqtt/Office_Socket/set"
-  Execute = [ { Control = "state", Setting = "OFF" } ]
+  Execute = [ { Key = "state", Value = "OFF" } ]
 
