Remove unnecessary [Event] section and replace with EventTopic in Automation confs

--- a/examples/configs/automation/morningHeatingStart.toml
+++ b/examples/configs/automation/morningHeatingStart.toml
@@ -1,9 +1,8 @@
 Name = "MorningHeatingStart"
 Description = "Main Downstairs Heaters On"
-Enabled = true
+Enabled = false
 
-[Event]
-  Topic = "aghast/time/events/MorningHeatingOn"
+EventTopic = "aghast/time/events/MorningHeatingOn"
 
 [Action.1]
   Topic = "daikin2mqtt/Hall/set/controls"
