--- a/examples/configs/automation/towelRailOffMorning.toml
+++ b/examples/configs/automation/towelRailOffMorning.toml
@@ -2,8 +2,7 @@ Name = "TowelRailOffMorning"
 Description = "Turn Towel-Rail off for overnight off-peak"
 Enabled = true
 
-[Event]
-  Topic = "aghast/time/events/NightOffPeakEnds"
+EventTopic = "aghast/time/events/NightOffPeakEnds"
 
 [Action.1]
   Topic = "zigbee2mqtt/Towel_Rail/set"
