--- a/examples/configs/automation/towelRailOnLunch.toml
+++ b/examples/configs/automation/towelRailOnLunch.toml
@@ -2,8 +2,7 @@ Name = "TowelRailOnLunch"
 Description = "Turn Towel-Rail on for lunchtime off-peak"
 Enabled = true
 
-[Event]
-  Topic = "aghast/time/events/LunchtimeOffPeakStarts"
+EventTopic = "aghast/time/events/LunchtimeOffPeakStarts"
 
 [Action.1]
   Topic = "zigbee2mqtt/Towel_Rail/set"
