--- a/examples/configs/automation/stairwayZapperOff.toml
+++ b/examples/configs/automation/stairwayZapperOff.toml
@@ -2,8 +2,7 @@ Name = "StairwayZapperOff"
 Description = "Turn zapper off at sunrise"
 Enabled = true
 
-[Event]
-  Topic = "aghast/time/events/Sunrise"
+EventTopic = "aghast/time/events/Sunrise"
 
 [Action.1]
   Topic = "zigbee2mqtt/Stairway_Socket/set"
