--- a/examples/configs/automation/towelRailOnNight.toml
+++ b/examples/configs/automation/towelRailOnNight.toml
@@ -1,8 +1,8 @@
-Name = "TowelRailOnNight"
+Name        = "TowelRailOnNight"
 Description = "Turn Towel-Rail on during night-time off-peak"
-Enabled = true
-EventTopic = "aghast/time/events/TowelRailOn"
+Enabled     = true
+EventTopic  = "aghast/time/events/TowelRailOn"
 
 [Action.1]
-  Topic = "zigbee2mqtt/Towel_Rail/set"
-  Execute = [ { Key = "state", Value = "ON" } ]
+  Topic   = "zigbee2mqtt/Towel_Rail/set"
+  Payload = '{ "state": "ON" }'
