--- a/examples/configs/automation/morningWarmup.toml
+++ b/examples/configs/automation/morningWarmup.toml
@@ -1,29 +1,20 @@
-Name = "MorningeWarmup"
+Name = "MorningWarmup"
 Description = "Warm upstairs"
 Enabled = false
-
 EventTopic = "aghast/time/events/MorningPrewarming"
 
 [Action.1]
   Topic = "daikin2mqtt/Steve_Office/set/controls"
-  Execute = [ { Key = "set_temp",    Value = 18.0 },
-              { Key = "mode",        Value = "Heat" },
-              { Key = "power",       Value = true } ]
+  Payload = '{ "set_temp": 18.0, "mode": "Heat", "power": true }'
+
 [Action.2]
   Topic = "daikin2mqtt/Paul_Studio/set/controls"
-  Execute = [ { Key = "set_temp",    Value = 18.0 },
-              { Key = "mode",        Value = "Heat" },
-              { Key = "power",       Value = true } ]
+  Payload = '{ "set_temp": 18.0, "mode": "Heat", "power": true }'
 
 [Action.3]
   Topic = "daikin2mqtt/Master_Bedroom/set/controls"
-  Execute = [ { Key = "set_temp",    Value = 18.0 },
-              { Key = "mode",        Value = "Heat" },
-              { Key = "fan",         Value = "3" },
-              { Key = "power",       Value = true } ]
+  Payload = '{ "set_temp": 18.0, "mode": "Heat", "power": true }'
 
 [Action.4]
   Topic = "daikin2mqtt/Dining_Room/set/controls"
-  Execute = [ { Key = "set_temp",    Value = 18.0 },
-              { Key = "mode",        Value = "Heat" },
-              { Key = "power",       Value = true } ]
+  Payload = '{ "set_temp": 18.0, "mode": "Heat", "power": true }'
